--- a/sesion08Entregable/app/src/main/res/layout/activity_data_saves.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_data_saves.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.rheras.sesion08entregable.DataSavesActivity">
 
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/sinpartidasguardadas"
-        android:id="@+id/datasaves"/>
-
-</ScrollView>
+        android:id="@+id/datasaves"
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="2dp">
+    </ListView>
+</LinearLayout>
