--- a/sesion08Entregable/app/src/main/res/layout/activity_register.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_register.xml
@@ -82,4 +82,34 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="loadImagefromGallery"/>
+
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+       <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/imgView"/>
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
