commit listas complete

--- a/sesion08Entregable/app/src/main/res/layout/activity_data_saves_detail.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_data_saves_detail.xml
@@ -7,14 +7,66 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.rheras.sesion08entregable.DataSavesDetailActivity">
+    tools:context="com.example.rheras.sesion08entregable.DataSavesDetailActivity"
+    android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:textSize="@dimen/titlesize2"
+        android:textAlignment="center"
+        android:id="@+id/matchof"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="@dimen/titlesize"
         android:id="@+id/names"/>
-    <TextView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/results"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="@dimen/titlesize"
+            android:textAlignment="center"
+            android:id="@+id/result1"/>
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+
+            android:textSize="@dimen/titlesize"
+
+            android:id="@+id/result2"/>
+
+    </LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/result1image" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/result2image"
+        android:layout_weight="1"/>
+
+</LinearLayout>
+
 
 </LinearLayout>
