--- a/sesion08Entregable/app/src/main/res/layout/activity_register.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/imagen"
-            android:onClick="loadImagefromGallery"/>
+            android:onClick="dispatchTakePictureIntent"/>
 
 
     </LinearLayout>
@@ -71,28 +71,23 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/imgView"/>
-
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:onClick="registerPlayers"/>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imgView"/>
 
 
     </LinearLayout>
