--- a/sesion08Entregable/app/src/main/res/layout/activity_data_saves.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_data_saves.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rheras.sesion08entregable.DataSavesActivity">
+    tools:context="com.example.rheras.sesion08entregable.DataSavesActivity"
+    >
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/datasaves"
-        android:divider="@color/colorPrimary"
-        android:dividerHeight="2dp">
+        android:divider="@color/primary"
+        android:dividerHeight="2dp"
+        android:background="@color/background">
+
     </ListView>
 </LinearLayout>
