--- a/sesion08Entregable/app/src/main/res/layout/activity_play.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_play.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.rheras.sesion08entregable.PlayActivity">
+    tools:context="com.example.rheras.sesion08entregable.PlayActivity"
+    android:background="@color/background">
 
 
     <TextView
@@ -15,7 +16,7 @@
         android:id="@+id/titulo"
         android:textSize="@dimen/titlesize2"
         android:padding="@dimen/normalpadding"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/text2"
         android:layout_gravity="center_horizontal" />
 
     <EditText
@@ -41,7 +42,7 @@
         android:id="@+id/ask"
         android:padding="@dimen/titlesize"
         android:textSize="@dimen/titlesize2"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/text2"
         android:layout_gravity="center_horizontal" />
 
     <LinearLayout
@@ -58,6 +59,8 @@
             android:text="@string/normal"
             android:id="@+id/normal"
             android:onClick="normal"
+            android:textColor="@color/text"
+            android:background="@color/primary"
             />
 
         <Button
@@ -66,6 +69,8 @@
             android:layout_height="wrap_content"
             android:text="@string/commander"
             android:id="@+id/commander"
+            android:textColor="@color/text"
+            android:background="@color/primary"
             />
 
         <Button
@@ -75,6 +80,8 @@
             android:text="@string/gigante"
             android:onClick="gigant"
             android:id="@+id/gigante"
+            android:textColor="@color/text"
+            android:background="@color/primary"
             />
 
     </LinearLayout>
@@ -86,6 +93,8 @@
         android:text="@string/guardadas"
         android:id="@+id/datas"
         android:onClick="dataSaves"
+        android:textColor="@color/text"
+        android:background="@color/primary"
         />
 
 
