--- a/sesion08Entregable/app/src/main/res/menu/menu_main.xml
+++ b/sesion08Entregable/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_create_new"
         android:title="@string/action_create_new"
-        android:icon="@drawable/ic_action_create_new"
-        app:showsAsAction="always"/>
+        android:icon="@mipmap/ic_add_white_24dp"
+        app:showAsAction="always"
+        />
+    <item android:id="@+id/action_menu"
+        android:icon="@mipmap/ic_more_vert_white_24dp"
+        android:title="@string/action_menu"
+        app:showAsAction="always"/>
 
 </menu>
