--- a/sesion08Entregable/app/src/main/res/layout/activity_data_saves_detail.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_data_saves_detail.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.rheras.sesion08entregable.DataSavesDetailActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,13 +17,17 @@
 
         android:textSize="@dimen/titlesize2"
         android:textAlignment="center"
-        android:id="@+id/matchof"/>
+        android:id="@+id/matchof"
+        android:background="@color/background"
+        android:textColor="@color/text2"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="@dimen/titlesize"
-        android:id="@+id/names"/>
+        android:id="@+id/names"
+        android:background="@color/background"
+        android:textColor="@color/text2"/>
 
 
     <LinearLayout
@@ -36,23 +41,27 @@
             android:layout_weight="1"
             android:textSize="@dimen/titlesize"
             android:textAlignment="center"
-            android:id="@+id/result1"/>
+            android:id="@+id/result1"
+            android:background="@color/background"
+            android:textColor="@color/text2"/>
         <TextView
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-
             android:textSize="@dimen/titlesize"
-
-            android:id="@+id/result2"/>
+            android:id="@+id/result2"
+            android:background="@color/background"
+            android:textColor="@color/text2"/>
 
     </LinearLayout>
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/background"
+    android:textColor="@color/text2">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -67,6 +76,8 @@
         android:layout_weight="1"/>
 
 </LinearLayout>
+
+
 
 
 </LinearLayout>
