--- a/sesion08Entregable/app/src/main/res/layout/activity_normal.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_normal.xml
@@ -1,183 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/normalpadding"
-    tools:context="com.example.rheras.sesion08entregable.NormalActivity">
-
-    <TextView
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="player1"
-        android:textAlignment="center"
-        android:id="@+id/normal1name"
-        android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/titlesize"
-        android:textColor="@color/colorPrimaryDark"
-        android:padding="@dimen/normalpadding"/>
+    tools:context="com.example.rheras.sesion08entregable.NormalActivity"
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1.5">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
         <TextView
-            android:layout_width="match_parent"
             android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="20"
-            android:gravity="center"
+            android:text="player1"
             android:textAlignment="center"
-            android:id="@+id/normalplayer1lifes"
+            android:id="@+id/normal1name"
             android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/numbers"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:textSize="@dimen/titlesize"
+            android:textColor="@color/text2"
+            android:background="@color/background"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
+            android:orientation="horizontal"
+            android:layout_weight="1.5"
+            android:background="@color/background">
+
+            <TextView
+
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="plus"
-                android:text="+"
-                android:id="@+id/plus1" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="plus"
-                android:text="+5"
-                android:id="@+id/plus15" />
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:text="20"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:id="@+id/normalplayer1lifes"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/numbers"
+                android:background="@color/background"
+                android:textColor="@color/text2"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-"
-                android:onClick="minusswitch"
-                android:id="@+id/minus1" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-5"
-                android:onClick="minusswitch"
-                android:id="@+id/minus15" />
-        </LinearLayout>
-
-            </LinearLayout>
-
-
-
-    </LinearLayout>
-
-
-    <TextView
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="player2"
-        android:textAlignment="center"
-        android:id="@+id/normal2name"
-        android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/titlesize"
-        android:textColor="@color/colorPrimaryDark"
-        android:padding="@dimen/normalpadding"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1.5"
-       >
-        <TextView
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="20"
-            android:textAlignment="center"
-            android:id="@+id/normalplayer2lifes"
-            android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/numbers"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 >
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="+"
-                android:onClick="plus"
-                android:id="@+id/plus2" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="+5"
-                android:onClick="plus"
-                android:id="@+id/plus25" />
-                </LinearLayout>
 
-            <LinearLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    >
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-"
-                android:onClick="minusswitch"
-                android:id="@+id/minus2" />
+                    android:padding="@dimen/normalpadding">
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="plus"
+                        android:text="+"
+                        android:id="@+id/plus1"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="plus"
+                        android:text="+5"
+                        android:id="@+id/plus15"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/normalpadding">
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-5"
-                android:onClick="minusswitch"
-                android:id="@+id/minus25" />
-                    </LinearLayout>
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="-"
+                        android:onClick="minusswitch"
+                        android:id="@+id/minus1"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="-5"
+                        android:onClick="minusswitch"
+                        android:id="@+id/minus15"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="player2"
+            android:textAlignment="center"
+            android:id="@+id/normal2name"
+            android:layout_gravity="center_horizontal"
+            android:textSize="@dimen/titlesize"
+            android:textColor="@color/text2"
+            android:background="@color/background"
+            />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1.5"
+            android:background="@color/background"
+            >
+            <TextView
+
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="20"
+                android:textAlignment="center"
+                android:id="@+id/normalplayer2lifes"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/numbers"
+                android:textColor="@color/text2"
+                android:background="@color/background"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/normalpadding"
+                    >
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="+"
+                        android:onClick="plus"
+                        android:id="@+id/plus2"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="+5"
+                        android:onClick="plus"
+                        android:id="@+id/plus25"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/normalpadding"
+                    >
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="-"
+                        android:onClick="minusswitch"
+                        android:id="@+id/minus2"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="-5"
+                        android:onClick="minusswitch"
+                        android:id="@+id/minus25"
+                        android:background="@color/primary"
+                        android:textColor="@color/text"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
 
 
-
-</LinearLayout>
+</ScrollView>
