--- a/sesion08Entregable/app/src/main/res/layout/splash_screen.xml
+++ b/sesion08Entregable/app/src/main/res/layout/splash_screen.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/splash_image"
-        android:id="@+id/imageView"/>
+        android:id="@+id/imageView"
+        android:background="@color/text2"/>
 
 </LinearLayout>
