--- a/sesion08Entregable/app/src/main/res/layout/activity_lista_jugadores.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_lista_jugadores.xml
@@ -12,6 +12,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listajugadores">
+        android:id="@+id/listajugadores"
+        android:choiceMode="multipleChoice">
     </ListView>
 </RelativeLayout>
