--- a/sesion08Entregable/app/src/main/res/layout/activity_register.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_register.xml
@@ -34,36 +34,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:text="@string/nombre"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="6"
             android:id="@+id/editTextName"/>
 
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:text="@string/life"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editTextLife"/>
-
-
-    </LinearLayout>
-
 
 
     <LinearLayout
@@ -89,6 +69,17 @@
             android:layout_height="match_parent"
             android:id="@+id/imgView"/>
 
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:onClick="verListaJugadores"/>
 
     </LinearLayout>
 
