--- a/sesion08Entregable/app/src/main/res/layout/activity_normal.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_normal.xml
@@ -14,6 +14,7 @@
         >
 
         <TextView
+            android:paddingTop="@dimen/extrapadding"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,7 +67,7 @@
                         android:onClick="plus"
                         android:text="+"
                         android:id="@+id/plus1"
-                        android:background="@color/primary"
+                        android:background="@color/primarylight"
                         android:textColor="@color/text"/>
                     <Button
                         android:layout_width="match_parent"
@@ -92,7 +93,7 @@
                         android:text="-"
                         android:onClick="minusswitch"
                         android:id="@+id/minus1"
-                        android:background="@color/primary"
+                        android:background="@color/primarylight"
                         android:textColor="@color/text"/>
                     <Button
                         android:layout_width="match_parent"
@@ -168,7 +169,7 @@
                         android:text="+"
                         android:onClick="plus"
                         android:id="@+id/plus2"
-                        android:background="@color/primary"
+                        android:background="@color/primarylight"
                         android:textColor="@color/text"/>
                     <Button
                         android:layout_width="match_parent"
@@ -195,7 +196,7 @@
                         android:text="-"
                         android:onClick="minusswitch"
                         android:id="@+id/minus2"
-                        android:background="@color/primary"
+                        android:background="@color/primarylight"
                         android:textColor="@color/text"/>
 
                     <Button
