--- a/sesion08Entregable/app/src/main/res/values/colors.xml
+++ b/sesion08Entregable/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="primary">#004D40</color>
+    <color name="primarylight">#00695C</color>
     <color name="secondary">#009688</color>
     <color name="text">#FFFFFF</color>
     <color name="background">#E0F2F1</color>
