--- a/sesion08Entregable/app/src/main/res/layout/activity_play.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_play.xml
@@ -90,6 +90,7 @@
                     android:id="@+id/commander"
                     android:textColor="@color/text"
                     android:background="@color/primary"
+                    android:onClick="edh"
                     />
 
                 <Button
