--- a/sesion08Entregable/app/src/main/res/layout-land/activity_play.xml
+++ b/sesion08Entregable/app/src/main/res/layout-land/activity_play.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_weight="1">
     <fragment
         android:name="com.example.rheras.sesion08entregable.PlayFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/playFragment">
+        android:id="@+id/playFragment"
+        tools:layout="@layout/fragment_play">
     </fragment>
 
 
 </LinearLayout>
 
 <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_weight="1">
     <fragment
         android:name="com.example.rheras.sesion08entregable.SavesFragment"
         android:layout_width="match_parent"
