--- a/sesion08Entregable/app/src/main/res/layout/fragment_saves.xml
+++ b/sesion08Entregable/app/src/main/res/layout/fragment_saves.xml
@@ -1,8 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rheras.sesion08entregable.SavesFragment">
+    tools:context="com.example.rheras.sesion08entregable.FragmentSaves"
+    >
 
     <ListView
         android:layout_width="match_parent"
@@ -13,5 +15,4 @@
         android:background="@color/background">
 
     </ListView>
-
 </LinearLayout>
