--- a/sesion08Entregable/app/src/main/res/values-en/string-en.xml
+++ b/sesion08Entregable/app/src/main/res/values-en/string-en.xml
@@ -21,4 +21,14 @@
     <string name="detailsofsavedmatch">Match details</string>
     <string name="appdesarrolladapor"><![CDATA[© 2016 Albert&Rubén, Inc. All rights reserved]]></string>
     <string name="magiclifecounter">Magic Life Counter</string>
+
+
+    <string name="life">Life</string>
+    <string name="imagen">Select an image</string>
+
+    <string name="action_create_new">Create new player</string>
+    <string name="action_menu">Menu</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="registrarjugador">Register a new player</string>
 </resources>
