--- a/sesion08Entregable/app/src/main/res/values/dimens.xml
+++ b/sesion08Entregable/app/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="titlesize">36dp</dimen>
     <dimen name="titlesize2">24dp</dimen>
-    <dimen name="textSize3">"20dp"</dimen>
+    <dimen name="textSize3">20dp</dimen>
     <dimen name="extrapadding">32dp</dimen>
     <dimen name="normalpadding">16dp</dimen>
     <dimen name="numbers">96dp</dimen>
