--- a/sesion08Entregable/app/src/main/res/layout/activity_commander.xml
+++ b/sesion08Entregable/app/src/main/res/layout/activity_commander.xml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.rheras.sesion08entregable.CommanderActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/myLinearLayout"
+        android:orientation="vertical">
 
-    
+    </LinearLayout>
+    <!--
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</ListView>
+
+        <com.example.rheras.playerlifecounter.PlayerLifeCounter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/playerLifeCounter1">
+        </com.example.rheras.playerlifecounter.PlayerLifeCounter>
+        <com.example.rheras.playerlifecounter.PlayerLifeCounter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/playerLifeCounter2">
+        </com.example.rheras.playerlifecounter.PlayerLifeCounter>
+
+        <com.example.rheras.playerlifecounter.PlayerLifeCounter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/playerLifeCounter3">
+        </com.example.rheras.playerlifecounter.PlayerLifeCounter>
+
+        <com.example.rheras.playerlifecounter.PlayerLifeCounter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/playerLifeCounter4">
+        </com.example.rheras.playerlifecounter.PlayerLifeCounter>
+        <com.example.rheras.playerlifecounter.PlayerLifeCounter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/playerLifeCounter5">
+        </com.example.rheras.playerlifecounter.PlayerLifeCounter>
+
+
+    </LinearLayout>
+
+
+
+-->
+
+</ScrollView>
+
+
